# PowerMethod

./: main.py  pyproject.toml
