[tool.poetry]
name = "powermethod"
version = "0.1.0"
description = ""
authors = ["KangWon LEE <kangwon.lee.edu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
